# byte-header-comparer

./: .flake8  .gitignore  pyproject.toml  readme.md
.github/workflows/: main.yml  python-app.yml
byte_header_comparer/: cli.py  exceptions.py  multip.py
src/: multip.py
tests/: conftest.py  test_cli.py  test_multip.py
tests/test_data/test_folder_1/: test.txt
