[tool.poetry]
name = "byte-header-comparer"
version = "0.1.1"
description = "Finds longest common substring between file headers hex format"
authors = ["Thomas <oeth@aarhus.dk>"]
readme = "README.md"
include = ["pyproject.toml"]


[tool.poetry.dependencies]
python = "^3.9"
black = "^23.12.0"
flake8 = "^6.1.0"
rich = "^13.7.0"

[tool.poetry.scripts]
comparer = "byte_header_comparer.multip:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
