[tool.poetry]
name = "byte-header-comparer"
version = "0.1.1"
description = "Finds longest common substring between file headers hex format"
authors = ["Thomas <oeth@aarhus.dk>"]
readme = "README.md"
include = ["pyproject.toml"]


[tool.poetry.dependencies]
python = "^3.9"
black = "^23.12.0"
rich = "^13.7.0"
ruff = "^0.2.2"
click = "^8.1.7"

[tool.poetry.scripts]
comparer = "byte_header_comparer.multip:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = [
    "C",
    "E",
    "F",
    "W",
   # "B", #TODO: Introduce this check. Will ask for some refactoring of error handling
    "I",
   # "C90", Checks for complexity, might be good but not essential
   # "N", #TODO: Introduce this check. Will force us to redo the naming of several functions
    "D",
    "UP",
    "YTT",
    "ANN",
   # "S", #TODO: Introduce this check. Will help us have secure calls to sub.process and such
    "BLE",
   # "FBT", #TODO: Introduce this check. Will asks us to remove boolean flags
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLE",
   # "PLR", #TODO: Introduce this check. Will suggest several large refactoring
    "PLW",
   # "TRY", #TODO: Introduce this check. Will help with our exception handling
    "RUF"
    ]
lint.ignore = [
    "ANN002", # missing type anottation for *args
    "ANN003", # missing type anotation for **kwargs
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "ANN201", # missing return type
    "ANN202", # missing return type
    "ANN206", # missing return type
    "ARG001", # missing type anotattion for args
    "BLE001", # catching general exceptions
    "D100", # missing docstring
    "D101", # missing docstring
    "D102", # missing docstring
    "D103", # missing docstring,
    "D104", # missing docstring,
    "D105", # missing docstring in magic method,
    "D106", # missing docstring in nested class,
    "D107", # missing docstring in __init__,
    "D203", # 0 blank line required before class docstring,
    "D204", # 1 blank line required after class docstring,
    "D212", # multi-line docstring summary should start at the first line,
    "D213", # multi-line docstring summary should start at the second line,
    "D300", # use triple docstring
    "E712", # comparison to True/False, we ignore because we use sqlalchemy
    "FBT001", # boolean arguement in function definition
    "N802", # name of function should be lower case
    "PLR2004", # magic value used in comparison
    "PT012", # ptest.raises should contain a simple statement
    "RET505", # unnecessary {branch} after return statement
    "S101", # use of assert,
    "TRY003", # avoid using long messages outside exception class
    "UP007", # not using | in type anotations
    "INP001", # implicit namespace without __init__ (throws errors in tests)
    "PLW2901", # redefing loop variables
    "C901", # complexity check
    "ISC001", # check for implicit concatanation of str on one line, not compatabil with black.
    ]
line-length = 110
exclude = [
    ".venv",
    "env",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["pytest.fixture"]